add customer care

--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
         </div>
         <div class="col-md-3">
           <h2>Customer Care</h2>
-           <p>mikeycharlesm7@gmail.com</p>
-           <p>Tell: 02200346476</p> 
-           <p>Phone: +254704220133</p>
+           <p>sandrakinya6@gmail.com</p>
+           <p>Tell: 2209876</p> 
+           <p>Phone: +2540743686790</p>
         </div>
         <div class="col-md-4">
             <div class="mapouter">
