--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         </div>
         <div class="col-md-3 text-justify">
           <h2>Location</h2>
-          <p>Pizza Deliciosa</p>
+          <p>world of pizza</p>
           <p>Maasai Mall | Ongata Rongai</p>
           <p>00453,Rongai </p>
         </div>
