--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       </div>
       <div class="row">
         <div class="container text-center footer">
-          <p>&copy; 2019 | Pizza Deliciosa</p>
+          <p>&copy; 2022 | world of pizza</p>
         </div>
       </div>
   </div>
