--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="view landing">
       <div id="overlay">
           <nav class="navbar navbar-expand-sm bg-success navbar-dark fixed-top">
-            <a class="navbar-brand" href="#">PIZZA DELICIOSA</a>
+            <a class="navbar-brand" href="#">WORLD OF PIZZA</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
               <span class="navbar-toggler-icon"></span>
             </button>
