add about us section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
   </header>
   
-  <!-- <div class="controls-top text-center" id="about_us"> 
+   <div class="controls-top text-center" id="about_us"> 
       <h2>About Us</h2>
   </div>
 
@@ -72,20 +72,20 @@
       <div class="col-sm-12 d-flex flex-xs-column">
         <div class="col-sm-7 img text-center about-img">
             <div class="about-pic">
-              <img src="images/ezgif.com-gif-maker.gif" alt="about-us">
+              <img src="" alt="about-us">
             </div>
         </div>
         <div class="col-sm-5 align-items-center">
           <div class="content">
             <h3>Who Are We?</h3>
-            <p>Pizza Deliciosa Restaurants that has been in pizza business for over 10years now and offers a very unique atmosphere for customers in 
+            <p> World of pizza has been in pizza business for over 5 years now and offers a very unique atmosphere for customers in 
               addition to home delivery services for all pizza orders and we know that pizza is a family meal 
-              which popular around the world and that has resulted in a large number of chains of pizza 
-              restaurants but non of them is the best than Pizza Deliciosa.</p>
+              which is popular around the world and that has resulted in a large number of chains of pizza 
+              restaurants but none of them is as good as world of pizza. So order with us and discover why many of our customers always pick us as their first choice when they crave for a delicious pizza meal.</p>
           </div>
         </div>
       </div>
-  </div> -->
+  </div> 
 
 
   <div class="container carousel slide carousel-multi-item" data-ride="carousel" id="variety">
