--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="col-sm-12 d-flex flex-xs-column">
         <div class="col-sm-7 img text-center about-img">
             <div class="about-pic">
-              <img src="" alt="about-us">
+              <img src="images/ezgif.com-gif-maker.gif" alt="about-us">
             </div>
         </div>
         <div class="col-sm-5 align-items-center">
