--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                   <label class="custom-control-label" for="Mushrooms">Mushrooms</label>
                 </div>
                 <br><br>
-              <button type ="submit" class ="btn btn-orange proceed">Proceed</button>
+              <button type ="submit" class ="btn btn-primary proceed">Proceed</button>
               
             </form>
           </div>
