--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="col-md-12 mb-4 white-text text-center text">
                   <h1 class="h1-reponsive gold-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 pulse"><strong>world of pizza</strong></h1>
                   <h5 class="text-uppercase mb-4 gold-text floater"><strong>Best Pizza Shop in Town!</strong></h5>
-                  <a class="btn btn-orange button floater" href="#make-order">  Order Now!</a>
+                  <a class="btn btn-warning button floater" href="#make-order">  Order Now!</a>
                 </div>
               </div>
             </div>
@@ -199,7 +199,7 @@
                   <label class="custom-control-label" for="Mushrooms">Mushrooms</label>
                 </div>
                 <br><br>
-              <button type ="submit" class ="btn btn-primary proceed">Proceed</button>
+              <button type ="submit" class ="btn btn-warning proceed">Proceed</button>
               
             </form>
           </div>
@@ -238,9 +238,9 @@
                 <p id="addedprice">Delivery will cost sh. 200</p>
                 <p id="finallmessage"></p>
               </div>
-              <button class="btn btn-orange addPizza">Add Pizza</button>
-              <button class="btn btn-orange" id="checkout">Checkout</button>
-              <button class="btn btn-orange deliver">Home delivery?</button>
+              <button class="btn btn-warning addPizza">Add Pizza</button>
+              <button class="btn btn-warning" id="checkout">Checkout</button>
+              <button class="btn btn-warning deliver">Home delivery?</button>
             </div>
             <div class="delivery">
                 <form action="">
@@ -248,7 +248,7 @@
                     <input type="text" id="name" class="form-control mb-3" placeholder="Name">
                     <input type="number" id="phone" class="form-control mb-3" placeholder="Pnone Number">
                     <input type="text" id="location" class="form-control mb-3" placeholder="Location for delivery">
-                    <button class="btn btn-orange" id="final-order">Place Order</button>
+                    <button class="btn btn-warning" id="final-order">Place Order</button>
                   </div>
                 </form>
             </div>
